Use URI.create().toURL() to initialize the URL.